# road2quant

./: .gitignore  LICENSE  README.md  RESEARCH_IDEAS.md  environment.yml  pyproject.toml  requirements.txt  setup_scaffold.sh
.github/workflows/: ci.yml  lint.yml
docs/: ee_to_quant_bridge.md
notebooks/electric_machine_modelling/: drive_cycle_ADALINE_yasa_estimation.ipynb  drive_cycle_yasa_estimation.ipynb
projects/00_dyno_to_markets/: README.md
projects/01_return_forecasting_baselines/: README.md
projects/02_portfolio_optimisation/: README.md
projects/03_backtest_engine/: README.md  report.md
projects/04_options_pricing_and_greeks/: README.md  data_refs.md
projects/05_gp_volatility/: README.md
projects/06_microstructure_execution/: README.md
projects/07_advanced_strategy_research/: README.md
