[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road2quant"
version = "0.1.0"
description = "Engineering to quant — a portfolio repository"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cwanasinghe" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "ipykernel",
    "jupyterlab",
]
quant = [
    "arch",          # GARCH family
    "yfinance",
    "pandas-datareader",
    "QuantLib",
    "cvxpy",         # convex portfolio optimisation
    "filterpy",      # Kalman / particle filters reference impls
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
